<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        tools:ignore="UnusedAttribute">

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_cpu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            custom:arc_bottom_text="@string/cpu_t"
            custom:arc_bottom_text_size="12sp"
            custom:arc_finished_color="@color/primary_text"
            custom:arc_stroke_width="7dp"
            custom:arc_suffix_text_padding="4dp"
            custom:arc_text_color="@color/font_white"
            custom:arc_text_size="35sp"
            custom:arc_unfinished_color="@color/font_white" />

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_ram"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@color/colorPrimary"
            custom:arc_bottom_text="@string/ram_m"
            custom:arc_bottom_text_size="12sp"
            custom:arc_finished_color="@color/colorAccent"
            custom:arc_stroke_width="7dp"
            custom:arc_suffix_text_padding="-2dp"
            custom:arc_suffix_text_size="12sp"
            custom:arc_text_color="@color/font_white"
            custom:arc_text_size="20sp"
            custom:arc_unfinished_color="@color/font_white"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tv_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/circle_view"
            android:drawablePadding="2dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/used"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_used"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/arc_ram"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_system_apps_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/system_and_apps"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/font_white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_available_ram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:text="@string/available_ram"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/font_white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_total_ram_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:text="@string/total_ram_space"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/font_white"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        custom:cardUseCompatPadding="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_cpu_feature_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp" />
    </android.support.v7.widget.CardView>
</LinearLayout>