<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/lato_black"
            tools:targetApi="jelly_bean"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/secondary_text"
            android:fontFamily="@font/lato_light"
            tools:targetApi="jelly_bean"
            android:textSize="16sp"
            tools:ignore="MissingPrefix" />

        <View
            android:layout_width="150dp"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:fontFamily="@font/lato_regular"
            tools:targetApi="jelly_bean"
            android:text="@string/about_app"
            android:textColor="@color/primary_text"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/developer_info"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    tools:ignore="MissingPrefix,RtlHardcoded"
                    tools:targetApi="m" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/dev_info"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="m" />

                <TextView
                    android:id="@+id/tv_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/company_phone"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="m" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorPrimary"
                    android:padding="10dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/address"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="m" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/tv_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_important_devices_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/website"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="m" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/divider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/rating_us"
                    android:fontFamily="@font/lato_black"
                    tools:targetApi="jelly_bean"
                    android:textSize="16sp" />

                <RatingBar
                    android:id="@+id/rb_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:numStars="5"
                    android:progressTint="@color/colorPrimary"
                    android:rating="5"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:soundEffectsEnabled="true"
                    android:stepSize="1.0"
                    tools:ignore="MissingPrefix"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>