<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardUseCompatPadding="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight=".8"
                    android:gravity="center|start"
                    android:text="@string/connection_status"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_connection_status"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@color/primary_text" />

            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight=".8"
                    android:gravity="center|start"
                    android:text="@string/data_type"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_data_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@color/primary_text" />

            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight=".8"
                    android:gravity="center|start"
                    android:text="@string/network_type"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_network_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@color/primary_text" />

            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight=".8"
                    android:gravity="center|start"
                    android:text="@string/ip_address"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_ip_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@color/primary_text" />

            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight=".8"
                    android:gravity="center|start"
                    android:text="@string/mac_address"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_mac_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@color/primary_text" />

            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="0.8"
                    android:gravity="center|start"
                    android:text="@string/ssid"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_ssid"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@color/primary_text" />

            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight=".8"
                    android:gravity="center|start"
                    android:text="@string/link_speed"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_link_speed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="@color/primary_text" />

            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>